<resources>
    <string name="app_name">Pacman Royale</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    // titles
    <string name="skills">Skills</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="exp">Exp</string>
    <string name="currencyBar">Currency</string>
    <string name="find_a_match">Find a match</string>
    <string name="fight_vs_ai">Fight VS. AI</string>


    // misc
    <string name="facebook_application_id">1591855007566489</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_play">PlayActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="exit_pacman_royale_title">Exit Pacman Royale?</string>
    <string name="exit_pacman_royale_message">Are you sure you want to exit Pacman Royale?</string>
    <string name="exit_match_title">Exit Match?</string>
    <string name="exit_match_message">Are you sure you want to exit the match?</string>
    <string name="yes">yes</string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    // Firebase Database values
    <string name="users_node">users</string>
    <string name="pacman_node">pacman</string>
    <string name="ghost_node">ghost</string>
    <string name="level">level</string>
    <string name="experience">experience</string>
    <string name="xPos">xPos</string>
    <string name="yPos">yPos</string>
    <string name="xPos2">xPos2</string>
    <string name="yPos2">yPos2</string>
    <string name="xPos3">xPos3</string>
    <string name="yPos3">yPos3</string>
    <string name="user_presence">status</string>
    <string name="waiting_room">WaitingRoom</string>
    <string name="virtual_room">VirtualRoom</string>
    <string name="ghostWaitingList">ghostWaitingList</string>
    <string name="pacmanWaitingList">pacmanWaitingList</string>
    <string name="pelletspercentage">PelletsPercentage</string>
    <string name="SFX">sfx</string>
    <string name="music">music</string>
    <string name="joystick">joystick</string>

    <string-array name="status_array">
        <item><string name="online">Online</string></item>
        <item><string name="playing">Playing</string></item>
        <item><string name="offline">Offline</string></item>
    </string-array>

    // firebase Virtual room values
    <string name="pacman_id">pacmanID</string>
    <string name="ghost_id">ghostID</string>
    <string name="pacmanXPos">pacmanXPos</string>
    <string name="pacmanYPos">pacmanYPos</string>
    <string name="ghostXPos">ghostXPos</string>
    <string name="ghostYPos">ghostYPos</string>
    <string name="blockSize">blocksize</string>
    <string name="screenWidth">screenwidth</string>
    <string name="pacmanDirection">direction</string>
    <string name="pacman_skills">pacmanSkills</string>
    <string name="invisible">invisible</string>
    <string name="play_vs_computer">Play!</string>
    <string name="play_as_pacman">Play as pacman</string>
    <string name="play_as_ghost">Play as ghost</string>
    <string name="searching_for_battle"><b>Searching for battle...</b></string>
    <string name="cancel">cancel</string>
    <string name="wins">wins</string>
    <string name="totalGames">totalGames</string>
    <string name="winRatio">winRatio</string>
    <string name="matchOver">matchOver</string>
    <string name="game_won">Congratulations! You Won the game!</string>
    <string name="game_lost">Ohh... better luck next time</string>
    <string name="go_invisible">Go Invisible</string>
    <string name="invisible_time">Invisible Time</string>
    <string name="log_out">Log Out</string>
    <string name="credits">Credits</string>

    <string name="pellets_eaten">Pellets eaten :</string>
    <string name="zero_percent">0%</string>
    <string name="invisibility">Invisibility</string>

    <string name="credits_msg">Design: Ayelet Raphaeli \n
        <a href="www.google.com">www.Ayelet-Raphaeli.com</a> \n\n
        Consultancy: Perry Shalom \n\n
        Development: \n
        Mark Lurie \u0020 \u0020 \u0020 \u0020 Omri Ohayon

    </string>
    <string name="tunneling">TUNNELING</string>
    <string name="tunneling_description">Tunneling is forbidden for GHOSTS! BUT , Sometimes when no one pays attention they sneak in and by a mysterious way they appear on the other side</string>
    <string name="invisibility_description">Shh... you are INVISIBLE! Ghosts can\'t see you but they can sense your presence.. WATCH YOUR BACK!</string>

</resources>
