<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.mark.pacmanroyale.Activities.MainActivity">

    <ImageView
        android:id="@+id/loading_screen"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        app:srcCompat="@drawable/app_loader"
        android:adjustViewBounds="true"/>



    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:visibility="invisible">

    </android.support.v4.view.ViewPager>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:tabBackground="@drawable/tab_bar_background"
        style="@style/MyTheme"
        android:visibility="invisible">

        <android.support.design.widget.TabItem
            android:id="@+id/skillsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skills" />

        <android.support.design.widget.TabItem
            android:id="@+id/playTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play" />

        <android.support.design.widget.TabItem
            android:id="@+id/settingsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />

    </android.support.design.widget.TabLayout>

</android.support.design.widget.CoordinatorLayout>
