<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mark.pacmanroyale.Activities.MainActivity$PlaceholderFragment"
    android:gravity="center|top"
    android:layout_marginTop="25dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/written_logo_large"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/joystick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joystick"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"/>

        <Switch
            android:id="@+id/joystick_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"/>

        <Switch
            android:id="@+id/music_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sfx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SFX"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"/>

        <Switch
            android:id="@+id/sfx_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"/>
    </LinearLayout>


    <Button
        android:id="@+id/credits"
        android:text="@string/credits"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:background="@drawable/orangebuttonshape"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/logOutBtn"
        android:text="@string/log_out"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:background="@drawable/orangebuttonshape"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="V1.0"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>
